--- a/css/style.css
+++ b/css/style.css
@@ -20,11 +20,11 @@ nav {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   padding: 25px 35px 15px 25px;
 }
 
@@ -32,7 +32,7 @@ nav .logo-wrapper {
   font-weight: 600;
   font-size: 20px;
   line-height: 28px;
-  color: #28352F;
+  color: #28352f;
 }
 
 nav .humburger-wrapper {
@@ -47,9 +47,8 @@ h1 {
   padding-top: 20px;
   font-size: 40px;
   text-align: center;
-  color: #172B4D;
+  color: #172b4d;
   font-weight: 700;
-  font-size: 40px;
   line-height: 52px;
   padding-left: 25px;
   padding-right: 25px;
@@ -60,11 +59,11 @@ h1 span {
 }
 
 h1 span:last-child {
-  color: #36B37F;
+  color: #36b37f;
 }
 
 h5 {
-  color: #172B4D;
+  color: #172b4d;
   font-size: 20px;
   line-height: 28px;
   padding-left: 25px;
@@ -81,8 +80,8 @@ h5 {
   list-style: none;
   padding: 35px 25px 20px 25px;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 .social li {
@@ -92,8 +91,8 @@ h5 {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .banner-section {
@@ -140,45 +139,46 @@ h5 {
   .works h2 {
     padding-bottom: 50px;
   }
+
   .works h2::after {
     content: "";
     position: absolute;
     bottom: 25px;
     left: 50%;
     -webkit-transform: translateX(-50%);
-            transform: translateX(-50%);
+    transform: translateX(-50%);
     display: block;
     width: 48px;
     height: 4px;
-    background-color: #36B37E;
+    background-color: #36b37e;
   }
 }
 
 .works .wrapper {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (Minmax(280px, 370px))[auto-fit];
-      grid-template-columns: repeat(auto-fit, Minmax(280px, 370px));
+  -ms-grid-columns: (minmax(280px, 370px)) [auto-fit];
+  grid-template-columns: repeat(auto-fit, minmax(280px, 370px));
   grid-gap: 25px;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 .works .work-item {
-  border: 1px solid #D0D9D4;
-  background-color: #EBF0EE;
+  border: 1px solid #d0d9d4;
+  background-color: #ebf0ee;
   border-radius: 8px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   overflow: hidden;
   margin-bottom: 5px;
 }
@@ -191,7 +191,7 @@ h5 {
 
 .works .div-wrapper {
   padding-bottom: 68%;
-  background-color: #EBF0EE;
+  background-color: #ebf0ee;
   width: 100%;
 }
 
@@ -212,14 +212,22 @@ h5 {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 .works ul li {
   margin-bottom: 8px;
+}
+
+.about ul li {
+  margin-bottom: 8px;
+}
+
+.about ul li:not(:last-child) {
+  margin-right: 8px;
 }
 
 .works ul li:not(:last-child) {
@@ -241,17 +249,17 @@ h5 {
 }
 
 .works li a {
-  color: #172B4D;
+  color: #172b4d;
   font-size: 12px;
   font-weight: 600;
-  background-color: #EBF0EE;
+  background-color: #ebf0ee;
   padding: 8px 12px 8px 12px;
   display: inline-block;
   border-radius: 4px;
 }
 
 .btn-green {
-  background: #36B37F;
+  background: #36b37f;
   border-radius: 4px;
   color: #fff;
   padding: 12px;
@@ -262,8 +270,8 @@ h5 {
 }
 
 .btn-green:hover {
-  -webkit-box-shadow: 0px 8px 16px rgba(54, 179, 127, 0.24);
-          box-shadow: 0px 8px 16px rgba(54, 179, 127, 0.24);
+  -webkit-box-shadow: 0 8px 16px rgba(54, 179, 127, 0.24);
+  box-shadow: 0 8px 16px rgba(54, 179, 127, 0.24);
 }
 
 .btn-green:focus {
@@ -290,12 +298,12 @@ h5 {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   padding-top: 4%;
   padding-bottom: 5%;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   margin-left: -12px;
   margin-right: -12px;
 }
@@ -308,8 +316,8 @@ h5 {
 
 .about .item-wrapper {
   -webkit-box-flex: 0;
-      -ms-flex: 0 1 372px;
-          flex: 0 1 372px;
+  -ms-flex: 0 1 372px;
+  flex: 0 1 372px;
   padding-left: 12px;
   padding-right: 12px;
   display: -webkit-box;
@@ -319,22 +327,22 @@ h5 {
 }
 
 .about .item {
-  background-color: #EBF0EE;
-  border: 1px solid #C1C7D0;
+  background-color: #ebf0ee;
+  border: 1px solid #c1c7d0;
   border-radius: 8px;
   -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   padding-top: 40px;
 }
 
@@ -402,11 +410,11 @@ h5 {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   background-color: #fff;
 }
 
@@ -420,22 +428,14 @@ h5 {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.about ul li {
-  margin-bottom: 8px;
-}
-
-.about ul li:not(:last-child) {
-  margin-right: 8px;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 .about li a {
-  color: #36B37E;
+  color: #36b37e;
   font-size: 12px;
   letter-spacing: 0.03em;
   background-color: #fff;
@@ -448,4 +448,3 @@ h5 {
 .about .btn-green {
   margin-top: 0;
 }
-
