--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@ h5 {
 }
 
 .works h2 {
-  color:#172B4D;
+  color: #172b4d;
   font-size: 40px;
   text-align: center;
   padding-bottom: 1%;
@@ -289,7 +289,7 @@ h5 {
 }
 
 .about h2 {
-  color: #172B4D;
+  color: #172b4d;
   font-size: 40px;
   text-align: center;
   padding-top: 12%;
@@ -364,7 +364,7 @@ h5 {
 }
 
 .about p {
-  color:#42526E;
+  color: #42526e;
   font-size: 20px;
   text-align: center;
   max-width: 900px;
