--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,32 @@ header {
   background-repeat: no-repeat;
   background-size: 100% 91%;
   background-position: 0 60px;
+  position: relative;
+}
+
+header > img{
+  display: none;
+}
+
+@media (min-width:767px){
+  header {
+    background-image: none;
+    max-width: 1410px;
+    padding-left:30px;
+    margin-left: auto;
+    margin-right: auto;
+    min-height: 630px;
+  }
+  header > img{
+    display: block;
+    width: 100%;    
+  } 
+  .sub-header{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+  } 
 }
 
 nav {
@@ -40,6 +66,40 @@ nav .humburger-wrapper {
 
 nav a {
   text-decoration: none;
+}
+
+nav ul{
+  display: none;
+}
+
+@media(min-width:767px){
+  nav{
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+  }
+  nav > a {
+    display: none;
+  }
+  nav > div {
+    display: none;
+  }
+  nav ul{
+    display: flex;
+    margin-top: 0;
+    padding: 0;
+    list-style: none;
+  }
+  nav ul li{
+    margin-left: 15px;
+    margin-right: 15px;
+
+  }
+  nav ul li a{
+    font-weight: 600;
+    color: #172b4d;
+
+  }
 }
 
 h1 {
@@ -106,6 +166,9 @@ h5 {
 
 .banner-section {
   text-align: center;
+  max-width: 710px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .banner-section p {
@@ -113,6 +176,17 @@ h5 {
   padding-right: 24px;
   font-size: 20px;
   line-height: 28px;
+  letter-spacing: -0.37px;
+}
+
+@media(min-width:767px){
+  .banner-section p {
+    font-size: 18px;
+
+  }
+  h1{
+    padding-top: 12%;
+  }
 }
 
 .arrow-wrapper {
@@ -139,8 +213,14 @@ h5 {
   margin-top: 20px;
 }
 
-@media (max-width: 575px) {
+@media(min-width:767px){
   .works h2 {
+    margin-top: 8%;
+  }
+}
+
+@media (max-width: 575px) {
+  .works h2 {    
     padding-bottom: 50px;
   }
 
@@ -479,6 +559,38 @@ footer a {
   margin-bottom: 60px;
 }
 
+.form button {
+  border: none;
+  -ms-flex-item-align: center;
+  -ms-grid-row-align: center;
+  align-self: center;
+}
+
+@media(min-width:767px){
+  .form{
+    display: flex;
+    justify-content: space-between;    
+  }
+  .left-col{
+    flex: 0 1 40%;
+  }
+  .right-col{
+    flex: 0 1 58%;
+  }
+  .form h2{
+    margin-top: 55px;
+    font-size: 30px;
+    margin-bottom: 0;
+    text-align: left;
+  }
+  .form button{
+    margin-top: 0;
+    -ms-flex-item-align: flex-start;
+    -ms-grid-row-align: flex-start;
+    align-self: flex-start;
+  }
+}
+
 .form form {
   display: flex;
   flex-direction: column;
@@ -498,7 +610,7 @@ footer a {
   margin-bottom: 24px;
   padding-left: 15px;
   padding-top: 12px;
-  height: 115px;
+  height: 100px;
 }
 
 .form input::-webkit-input-placeholder,
@@ -546,13 +658,6 @@ footer a {
   color: #091e42;
 }
 
-.form button {
-  border: none;
-  -ms-flex-item-align: center;
-  -ms-grid-row-align: center;
-  align-self: center;
-}
-
 footer {
   text-align: center;
   display: -webkit-box;
@@ -592,4 +697,8 @@ footer .line {
   width: 150px;
   margin-top: 300px;
   margin-bottom: 5px;
+}
+
+.br{
+  border: 1px solid red;
 }
