--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,34 @@ header {
   background-repeat: no-repeat;
   background-size: 100% 91%;
   background-position: 0 60px;
+  position: relative;
+}
+
+header > img {
+  display: none;
+}
+
+@media (min-width: 767px) {
+  header {
+    background-image: none;
+    max-width: 1410px;
+    padding-left: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    min-height: 630px;
+  }
+
+  header > img {
+    display: block;
+    width: 100%;
+  }
+
+  .sub-header {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+  }
 }
 
 nav {
@@ -40,6 +68,44 @@ nav .humburger-wrapper {
 
 nav a {
   text-decoration: none;
+}
+
+nav ul {
+  display: none;
+}
+
+@media (min-width: 767px) {
+  nav {
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+  }
+
+  nav > a {
+    display: none;
+  }
+
+  nav > div {
+    display: none;
+  }
+
+  nav ul {
+    display: flex;
+    margin-top: 0;
+    padding: 0;
+    list-style: none;
+  }
+
+  nav ul li {
+    margin-left: 15px;
+    margin-right: 15px;
+    position: relative;
+  }
+
+  nav ul li a {
+    font-weight: 600;
+    color: #172b4d;
+  }
 }
 
 h1 {
@@ -98,6 +164,12 @@ h5 {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  transition: all .5s;
+}
+
+.arrow-wrapper img:hover{
+  transform: translateY(8px);
+  transition: all .5s;
 }
 
 .social li img {
@@ -106,6 +178,9 @@ h5 {
 
 .banner-section {
   text-align: center;
+  max-width: 710px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .banner-section p {
@@ -113,6 +188,17 @@ h5 {
   padding-right: 24px;
   font-size: 20px;
   line-height: 28px;
+  letter-spacing: -0.37px;
+}
+
+@media (min-width: 767px) {
+  .banner-section p {
+    font-size: 18px;
+  }
+
+  h1 {
+    padding-top: 12%;
+  }
 }
 
 .arrow-wrapper {
@@ -137,6 +223,12 @@ h5 {
   padding-bottom: 1%;
   position: relative;
   margin-top: 20px;
+}
+
+@media (min-width: 767px) {
+  .works h2 {
+    margin-top: 8%;
+  }
 }
 
 @media (max-width: 575px) {
@@ -277,6 +369,7 @@ footer a {
   margin-top: 10px;
   letter-spacing: 0.03em;
   text-decoration: none;
+  transition: all 0.5s;
 }
 
 .btn-green:hover {
@@ -415,6 +508,17 @@ footer a {
   background-size: contain;
 }
 
+@media (min-width: 767px) {
+  .about .p-wrapper::before {
+    left: -24px;
+    width: 231px;
+  }
+
+  .about .p-wrapper::after {
+    width: 145px;
+  }
+}
+
 .about .circle {
   width: 80px;
   height: 80px;
@@ -479,6 +583,42 @@ footer a {
   margin-bottom: 60px;
 }
 
+.form button {
+  border: none;
+  -ms-flex-item-align: center;
+  -ms-grid-row-align: center;
+  align-self: center;
+}
+
+@media (min-width: 767px) {
+  .form {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .left-col {
+    flex: 0 1 40%;
+  }
+
+  .right-col {
+    flex: 0 1 58%;
+  }
+
+  .form h2 {
+    margin-top: 55px;
+    font-size: 30px;
+    margin-bottom: 0;
+    text-align: left;
+  }
+
+  .form button {
+    margin-top: 0;
+    -ms-flex-item-align: flex-start;
+    -ms-grid-row-align: flex-start;
+    align-self: flex-start;
+  }
+}
+
 .form form {
   display: flex;
   flex-direction: column;
@@ -498,7 +638,7 @@ footer a {
   margin-bottom: 24px;
   padding-left: 15px;
   padding-top: 12px;
-  height: 115px;
+  height: 100px;
 }
 
 .form input::-webkit-input-placeholder,
@@ -546,11 +686,24 @@ footer a {
   color: #091e42;
 }
 
-.form button {
-  border: none;
-  -ms-flex-item-align: center;
-  -ms-grid-row-align: center;
-  align-self: center;
+.illustration {
+  margin-top: -300px;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  max-width: 1440px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.illustration .last {
+  margin-left: auto;
+}
+
+.illustration img:not(.last) {
+  margin-top: 12%;
 }
 
 footer {
@@ -592,4 +745,50 @@ footer .line {
   width: 150px;
   margin-top: 300px;
   margin-bottom: 5px;
+}
+
+@media (min-width: 767px) {
+  footer > a {
+    display: none;
+  }
+
+  footer .line {
+    display: none;
+  }
+
+  footer .social::after {
+    content: none;
+  }
+
+  footer .social {
+    border-top: 1px solid #d0d9d4;
+    padding: 20px 25px 20px 25px;
+    margin-top: 0;
+  }
+}
+
+@media (max-width: 1400px) {
+  .illustration .last {
+    display: none;
+  }
+}
+
+@media (max-width: 1230px) {
+  .illustration {
+    display: none;
+  }
+
+  footer {
+    margin-top: 200px;
+  }
+}
+
+@media (max-width: 767px) {
+  footer {
+    margin-top: 0;
+  }
+}
+
+.br {
+  border: 1px solid red;
 }
