--- a/css/style.css
+++ b/css/style.css
@@ -375,6 +375,8 @@ footer a {
 .btn-green:hover {
   -webkit-box-shadow: 0 8px 16px rgba(54, 179, 127, 0.24);
   box-shadow: 0 8px 16px rgba(54, 179, 127, 0.24);
+  color: #0a0404;
+  transition: all 0.5s;
 }
 
 .btn-green:focus {
