--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,7 @@ h1 span {
 }
 
 h1 span:last-child {
-  color: #36b37f;
+  color: #172b4d;
 }
 
 h5 {
@@ -375,7 +375,7 @@ footer a {
 .btn-green {
   background: #36b37f;
   border-radius: 4px;
-  color: #fff;
+  color: #000;
   padding: 12px;
   display: inline-block;
   margin-top: 10px;
@@ -566,8 +566,9 @@ footer a {
 }
 
 .about li a {
-  color: #36b37e;
+  color: #172b4d;
   font-size: 12px;
+  font-weight: 600;
   letter-spacing: 0.03em;
   background-color: #fff;
   padding: 12px 12px 12px 12px;
@@ -794,4 +795,18 @@ footer .line {
   .illustration {
     display: none;
   }
+}
+
+.red{
+  background-color: red;
+  float:left;
+  width: 33.33%;
+}
+.red{
+  background-color: rgb(99, 160, 140);
+  float:left;
+  width: 33.33%;
+}
+.red, .blue{
+  width: 100%;
 }
