--- a/css/style.css
+++ b/css/style.css
@@ -70,10 +70,6 @@ nav a {
   text-decoration: none;
 }
 
-nav ul {
-  display: none;
-}
-
 @media (min-width: 768px) {
   nav {
     -webkit-box-pack: center;
@@ -94,6 +90,10 @@ nav ul {
     margin-top: 0;
     padding: 0;
     list-style: none;
+  }
+
+  nav ul span{
+    display: none;
   }
 
   nav ul li {
@@ -118,6 +118,81 @@ nav ul {
     font-weight: 600;
     color: #172b4d;
   }
+}
+
+@media(max-width:768px){
+  .mob-background {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: calc(-100% - 50px);
+    left: -100%;
+    transition: 0.5s; 
+  }
+
+    .active .mob-background{
+    left: 0;
+    transition: 0.5s; 
+    background-color:rgba(178, 167, 182, 0.8);
+  }
+  nav ul {
+    position: fixed;
+    z-index: 10;
+    height: calc(100vh - 60px);
+    width: 100%;
+    top: 0;
+    left: calc(-100% - 50px);
+    transition: 0.5s;    
+    list-style: none;
+    padding-left: 0; 
+    margin-top: 0;   
+    background-color: #fff;
+    border-radius: 0 0 25px 25px;
+  }
+
+  nav ul li:first-child{
+    margin-top: 85px;
+  }
+
+  .active nav ul {
+    left: 0px;
+    transition: 0.5s;
+  }
+
+  nav ul span{
+    display: flex;
+    position: absolute;
+    top: 25px;
+    right: 33px;
+    font-size: 25px;
+    color: #67798E;
+    cursor: pointer;
+  }
+
+  nav ul span.mob-l{
+    position: absolute;
+    bottom: 5px;
+    top: auto;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100px;
+    height: 4px;
+    background-color: #000;
+    border-radius: 5px;
+  }
+
+  nav ul li {
+    padding-bottom: 15px;
+    padding-left: 25px;
+  }
+
+  nav ul li a{
+    font-size: 32px;
+    color: #3A4A42;
+    font-weight: 600;
+  }
+
 }
 
 h1 {
