Update index.html and style.css

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@ body {
   margin: 0;
 }
 
+body.no-scroll {
+  overflow-y: hidden;
+}
+
 header {
   background-image: url(../img/header-illsutration-mobile.png);
   background-repeat: no-repeat;
@@ -248,11 +252,19 @@ h5 {
   align-items: center;
 }
 
+.btn-wrapper img {
+  margin-left: 10px;
+}
+
 .arrow-wrapper img {
   display: block;
   margin-left: auto;
   margin-right: auto;
   transition: all 0.5s;
+}
+
+.image-wrapper img {
+  width: 100%;
 }
 
 .social li img {
@@ -386,6 +398,10 @@ h5 {
   text-align: center;
   padding-bottom: 25px;
   padding-top: 15px;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .works ul {
@@ -436,6 +452,8 @@ footer a {
   margin-top: 0;
   margin-bottom: 0;
   font-family: "Poppins", serif;
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
 .works li a {
@@ -458,6 +476,11 @@ footer a {
   letter-spacing: 0.03em;
   text-decoration: none;
   transition: all 0.5s;
+  cursor: pointer;
+}
+
+.works .btn-green {
+  margin-top: auto;
 }
 
 .btn-green:hover {
@@ -880,5 +903,143 @@ footer .line {
 @media (max-width: 768px) {
   .illustration {
     display: none;
+  }
+}
+
+.popup-background {
+  padding-top: min(5%, 60px);
+  padding-bottom: 40px;
+  padding-left: 16px;
+  padding-right: 16px;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  overflow-y: auto;
+  display: none;
+}
+
+.no-scroll .popup-background {
+  display: block;
+}
+
+.popup {
+  max-width: 872px;
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-top: 80px;
+  padding-bottom: 40px;
+  margin-right: auto;
+  margin-left: auto;
+  background-color: #fff;
+  border-radius: 8px;
+  position: relative;
+}
+
+.popup .closeclass {
+  padding: 3px 12px 7px;
+  border-radius: 8px;
+  font-size: 24px;
+  background-color: #ebecf0;
+  position: absolute;
+  top: 25px;
+  right: 25px;
+  color: #67798e;
+  cursor: pointer;
+}
+
+.image-wrapper {
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+.popup p {
+  font-size: 16px;
+  line-height: 30px;
+  margin: 0;
+}
+
+.title-and-btn {
+  display: flex;
+  align-items: flex-start;
+  margin-top: 40px;
+}
+
+.title-and-btn h2 {
+  font-size: 32px;
+  margin: 0;
+}
+
+.btn-wrapper {
+  display: flex;
+}
+
+.btn-wrapper .btn-green {
+  display: flex;
+  align-items: center;
+  font-size: 15px;
+  border: none;
+  font-weight: 600;
+  font-family: "Inter", sans-serif;
+  margin-left: 12px;
+  margin-top: 0;
+  white-space: nowrap;
+  letter-spacing: initial;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.popup .works {
+  padding: 0;
+}
+
+.popup .works ul {
+  justify-content: initial;
+  padding: 0;
+}
+
+@media (max-width: 768px) {
+  .popup {
+    padding: 16px;
+  }
+
+  .popup p {
+    padding-bottom: 60px;
+  }
+
+  .btn-wrapper {
+    position: absolute;
+    bottom: 18px;
+    left: 12px;
+    right: 12px;
+    justify-content: center;
+  }
+
+  .btn-wrapper .btn-green:first-child {
+    margin-left: 0;
+    padding-left: 0;
+    padding-right: 0;
+    flex: 0 1 140px;
+    justify-content: center;
+  }
+
+  .btn-wrapper .btn-green:last-child {
+    padding-left: 0;
+    padding-right: 0;
+    flex: 0 1 150px;
+    justify-content: center;
+  }
+
+  .popup-background {
+    padding-top: 20px;
+    padding-bottom: 25px;
+  }
+
+  .popup .closeclass {
+    background-color: transparent;
+    color: #fff;
+    font-size: 28px;
   }
 }
