--- a/style.scss
+++ b/style.scss
@@ -474,7 +474,7 @@ $base: #000825;
     height: 330px;
     flex: 0 0 30%;    
     border-radius: 10px;   
-    background-image: url(/images/cc.jpg);
+    background-image: url(../images/cc.jpg);
     background-repeat: no-repeat; 
     background-size: cover;     
   }
@@ -482,9 +482,9 @@ $base: #000825;
     box-shadow: 0 0 10px 0 rgba($base, 0.2);
     background: linear-gradient(
       40deg,
-      rgba(#fff, 0.6) 10%,
-      rgba(#fff, 0.3) 60%,
-      rgba(#fff, 0.8) 100%
+      rgba(#fff, 0.4) 10%,
+      rgba(#fff, 0.2) 60%,
+      rgba(#fff, 0.4) 100%
     );
     backdrop-filter: blur(0px);
     border-radius: 10px;
